--- a/config.ini
+++ b/config.ini
@@ -2,6 +2,8 @@
 # port used by HTTP server
 port = 8080
 
+[generator]
+
 # location of generated html files
 public = ./public
 
@@ -11,3 +13,10 @@ title = My website
 
 # descriptions displayed on index page, otherwise post description is used
 description = Default description
+
+[rss]
+
+# domain name for xml feed
+domain = https://example.com
+
+author = Your name
