Added RSS feeds

--- a/config.ini
+++ b/config.ini
@@ -2,11 +2,6 @@
 # port used by HTTP server
 port = 8080
 
-[generator]
-
-# location of generated html files
-public = ./public
-
 [content]
 # title displayed on index page, otherwise post title is used
 title = My website
@@ -19,4 +14,8 @@ description = Default description
 # domain name for xml feed
 domain = https://example.com
 
+# author name
 author = Your name
+
+# author email
+email = me@example.com
